testsuite/tests/deriving/should_fail/Roles5.hs
module Roles5 where

data T a@N
class C a@R
type S a@P = Int